[package]
name = "minicdn"
authors = ["Finn Bear"]
version = "0.1.3"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/finnbear/minicdn/"
description = "Static files, compressed for efficiency."

[features]
serde = ["minicdn_core/serde"]

[dependencies]
minicdn_core = {version = "0.1.1", path = "./minicdn_core"}
minicdn_macros = {version = "0.1.3", path = "./minicdn_macros"}

[dev-dependencies]
serde_json = "1.0"