[package]
name = "minicdn"
authors = ["Finn Bear"]
version = "0.1.5"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/finnbear/minicdn/"
description = "Static files, compressed for efficiency."

[features]
serde = ["minicdn_core/serde"]
serde_base64 = ["minicdn_core/serde_base64"]

[dependencies]
minicdn_core = {version = "0.1.5", path = "./minicdn_core"}
minicdn_macros = {version = "0.1.5", path = "./minicdn_macros"}

[dev-dependencies]
serde_json = "1.0"