[package]
name = "minicdn"
authors = ["Finn Bear"]
version = "0.1.20"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/finnbear/minicdn/"
description = "Static files, compressed for efficiency."

[features]
etag = ["minicdn_core/etag", "minicdn_macros/etag"]
mime = ["minicdn_core/mime", "minicdn_macros/mime"]
last_modified = ["minicdn_core/last_modified", "minicdn_macros/last_modified"]
brotli = ["minicdn_core/brotli", "minicdn_macros/brotli"]
gzip = ["minicdn_core/gzip", "minicdn_macros/gzip"]
webp = ["minicdn_core/webp", "minicdn_core/image", "minicdn_macros/webp"]
serde = ["minicdn_core/use_serde", "minicdn_macros/serde"]
config = ["minicdn_core/config", "minicdn_macros/config"]

[dependencies]
minicdn_core = { version = "0.1.20", path = "./minicdn_core" }
minicdn_macros = { version = "0.1.20", path = "./minicdn_macros" }

[dev-dependencies]
serde_json = "1.0"
