[package]
name = "minicdn_core"
version = "0.1.20"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/finnbear/minicdn/"
description = "Static files, compressed for efficiency (core crate)."

[features]
etag = ["sha256"]
last_modified = []
mime = ["mime_guess"]
gzip = ["flate2"]
use_serde = ["serde", "bytes/serde"]
webp = ["dep:webp", "mime_guess"]
config = ["toml", "serde"]

[dependencies]
mime_guess = { version = "2.0", optional = true }
sha256 = { version = "1.0", optional = true }
walkdir = "2.3"
flate2 = { version = "1", optional = true }
brotli = { version = "3.3", optional = true }
webp = { version = "0.2", optional = true }
image = { version = "0.24", features = [
    "png",
    "jpeg",
], default-features = false, optional = true }
serde = { version = "1.0", features = ["derive", "rc"], optional = true }
toml = { version = "0.5", optional = true }
bytes = "1"
bytestring = { version = "1.1.0", features = ["serde"] }
base64 = "0.13"
